--- a/packages/staking-ui/src/index.css
+++ b/packages/staking-ui/src/index.css
@@ -13,3 +13,52 @@
 /*  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',*/
 /*    monospace;*/
 /*}*/
+.card {
+  display: flex;
+  flex-direction: column;
+  flex: 0.3;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+  padding: 20px;
+  background-color: #f5f4f4;
+  border-radius: 20px;
+}
+
+.cardBody {
+  font-size: 30px;
+}
+
+.tableButton {
+  margin: 2px;
+}
+
+.blockInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+} 
+
+.blockInfoTitle {
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+} 
+
+.blockInfoData {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding: 5px;
+  background-color: #f5f4f4;
+  border-radius: 20px;
+}
+
+.blockInfoItem {
+  display: flex;
+  flex-direction: column;
+}
