--- a/packages/staking-ui/src/index.css
+++ b/packages/staking-ui/src/index.css
@@ -1,4 +1,4 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 
 /*body {*/
 /*  margin: 0;*/
@@ -13,6 +13,29 @@
 /*  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',*/
 /*    monospace;*/
 /*}*/
+:root {
+  --SD100: #0b0d0f;
+  --SD075: #16191d;
+  --SD050: #2e3338;
+  --SD025: #464c53;
+  --SD010: #777f88;
+  --SL100: #fff;
+  --SL075: #fcfcfc;
+  --SL050: #f2f2f3;
+  --SL025: #e5e5e6;
+  --S100: #c60000;
+  --S075: #ed0000;
+  --S050: #ff1515;
+  --S025: #ff6363;
+}
+
+body {
+  background-color: var(--SD100);
+  color: var(--SL100);
+}
+h1.ant-typography {
+  color: var(--SD010);
+}
 
 .centred {
   display: flex;
@@ -39,15 +62,19 @@
   display: flex;
   flex-direction: column;
   flex: 0.3;
-  height: 100px;
   justify-content: center;
   align-items: center;
   margin: 5px;
-  padding: 20px;
-  background-color: #f5f4f4;
+  padding: 40px 20px;
+  background-color: #000;
   border-radius: 20px;
 }
-
+.card .ant-typography {
+  color: var(--SL075);
+}
+.card h5.ant-typography {
+  color: var(--SD010);
+}
 .cardBody {
   font-size: 30px;
 }
@@ -61,13 +88,13 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-} 
+}
 
 .blockInfoTitle {
   display: flex;
   flex-direction: row;
   margin: 5px;
-} 
+}
 
 .blockInfoData {
   width: 100%;
@@ -75,11 +102,45 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  padding: 5px;
-  background-color: #f5f4f4;
+  padding: 0;
   border-radius: 20px;
 }
-
+.blockInfoData {
+  background-color: none;
+}
+.blockInfoData .ant-typography {
+  color: var(--SL025);
+}
+.blockInfoData > div .ant-row strong {
+  color: var(--SD010);
+}
+.blockInfoData > div .ant-row {
+  padding: 4px 0;
+}
+.blockInfoData > div {
+  padding: 72px 32px 32px 32px;
+  background-position: top right;
+  background-size: 240px;
+  background-repeat: no-repeat;
+  background-color: var(--SD075);
+  border-radius: 16px;
+}
+.blockInfoData > div:first-child {
+  background-image: url(../../../packages/staking-ui/public/bg-40.png);
+}
+.blockInfoData > div:first-child + div {
+  background-image: url(../../../packages/staking-ui/public/53.png);
+}
+.blockInfoData > div:first-child + div + div {
+  background-image: url(../../../packages/staking-ui/public/13.png);
+}
+.main-page {
+  background-image: url(../../../packages/staking-ui/public/jfin-bg.png);
+  background-size: 100%;
+  background-position: 0 -40%;
+  background-repeat: no-repeat;
+  padding: 0 32px 80px 32px;
+}
 .blockInfoItem {
   display: flex;
   flex-direction: column;
@@ -93,4 +154,50 @@
 
 .ant-input-number {
   width: 100%;
+}
+.ant-table-thead > tr > th {
+  background-color: var(--SD075);
+  border-bottom-color: var(--SD025);
+  color: var(--SL075);
+}
+.ant-table {
+  background-color: var(--SD050);
+  color: var(--SL075);
+}
+.ant-table-tbody > tr > td {
+  border-bottom-color: var(--SD025);
+}
+.ant-menu {
+  background-color: var(--SD075);
+  color: var(--SL025);
+  border-bottom-color: var(--SD050);
+}
+.ant-table-tbody > tr.ant-table-row:hover > td {
+  background-color: var(--SD075);
+}
+.ant-menu-overflow-item.ant-menu-item.ant-menu-item-selected {
+  color: var(--S100);
+}
+.ant-menu-overflow-item.ant-menu-item.ant-menu-item-selected::after {
+  border-bottom-color: var(--S100);
+}
+.ant-menu .ant-menu-overflow-item.ant-menu-item:hover {
+  color: var(--S075);
+}
+.ant-menu .ant-menu-overflow-item.ant-menu-item:hover::after {
+  border-bottom-color: var(--S075);
+}
+.ant-btn-primary {
+  background: var(--S075);
+  border-color: var(--S075);
+}
+.ant-btn-primary,
+.ant-btn-default {
+  border-radius: 20px;
+}
+.ant-btn-primary:hover {
+  background: var(--S100);
+  border-color: var(--S100);
+}
+[class*="ant-btn"] {
 }
