--- a/packages/staking-ui/src/index.css
+++ b/packages/staking-ui/src/index.css
@@ -99,12 +99,24 @@ h1.ant-typography {
 .blockInfoData {
   width: 100%;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-around;
   padding: 0;
   border-radius: 20px;
 }
+
+@media only screen and (min-width: 768px) {
+  .blockInfoData {
+    flex-direction: row;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .blockInfoData {
+    flex-direction: column;
+  }
+}
+
 .blockInfoData {
   background-color: none;
 }
@@ -161,6 +173,7 @@ h1.ant-typography {
   color: var(--SL075);
 }
 .ant-table {
+  overflow: auto;
   background-color: var(--SD050);
   color: var(--SL075);
 }
