--- a/packages/staking-ui/src/pages/index.css
+++ b/packages/staking-ui/src/pages/index.css
@@ -1,5 +1,16 @@
 .validatorHeadWrapper {
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
+}
+
+@media only screen and (min-width: 768px) {
+  .validatorHeadWrapper {
+    flex-direction: row;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .validatorHeadWrapper {
+    flex-direction: column;
+  }
 }
